apps/prod/strategos/strategos-site-svc.yml
# Strategos Site Service
apiVersion: v1
kind: Service
metadata:
  name: strategos-site
  namespace: strategos
  labels:
    app.kubernetes.io/name: strategos-site
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: strategos
spec:
  selector:
    app.kubernetes.io/name: strategos-site
  ports:
    - port: 80
      targetPort: 80
      name: http
